--- a/config/default.yml
+++ b/config/default.yml
@@ -4,3 +4,11 @@
 #   Description: 'TODO: Write a description of the cop.'
 #   Enabled: pending
 #   VersionAdded: '0.80'
+
+Bugcrowd/RailsConfigurationMutation:
+  Description: 'Prevent direct modification of Rails config to prevent global state pollution'
+  Include:
+    - 'spec/**/*.rb'
+  Exclude:
+    - 'spec/spec_helper.rb'
+  Enabled: true
