--- a/config/default.yml
+++ b/config/default.yml
@@ -4,3 +4,11 @@
 #   Description: 'TODO: Write a description of the cop.'
 #   Enabled: pending
 #   VersionAdded: '0.80'
+
+Bugcrowd/VisitInBeforeHook:
+  Description: "Avoid using 'visit' in before hooks, as it creates strict order dependencies that are hard to untangle"
+  Include:
+    - 'spec/**/*.rb'
+  Exclude:
+    - 'spec/spec_helper.rb'
+  Enabled: true
